# dancing-ghost

./: CMakeLists.txt  README.md  submission-realtime.md  submission.md
resources/shaders/: cloth_normals.frag  cloth_normals.vert  cloth_texture.frag  cloth_texture.vert  cloth_vertices.frag  cloth_vertices.vert  default.frag  default.vert  default2.frag  default2.vert  default_cloth.frag  default_cloth.vert
src/: Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  cloth.cpp  cloth.h  clothgeneration.cpp  joint.cpp  joint.h  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  settings.h  simulation.cpp
src/camera/: camera.cpp  camera.h
src/shapes/: Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h
src/utils/: assimp_glm_helpers.h  sceneparser.cpp
